--- a/0x02-i18n/translations/en/LC_MESSAGES/messages.po
+++ b/0x02-i18n/translations/en/LC_MESSAGES/messages.po
@@ -20,18 +20,18 @@ msgstr ""
 
 #: templates/3-index.html:4 templates/4-index.html:4 templates/5-index.html:4
 msgid "Welcome to Holberton"
-msgstr ""
+msgstr "Welcome to Holberton"
 
 #: templates/3-index.html:7 templates/4-index.html:7 templates/5-index.html:7
 msgid "Hello world!"
-msgstr ""
+msgstr "Hello world!"
 
 #: templates/5-index.html:9
 #, python-format
 msgid "You are logged in as %(username)s."
-msgstr ""
+msgstr "You are logged in as %(username)s."
 
 #: templates/5-index.html:11
 msgid "You are not logged in."
-msgstr ""
+msgstr "You are not logged in."
 
